Make use of Spring 🍃
Signed-off-by: Gopal S Akshintala <gopala.akshintala@salesforce.com>